# notes

./: .agents.db  .gitignore  .mcp.json  .progress.db  .spaced-repetition.db  00-READ-ME-FIRST.md  2026-03-13.md  2Days Plan.md  AGENTS.md  ANALYZER-REPORT.md  AUDIT-REPORT.md  BAC-COLLECTION-GUIDE.md  BAC-OCR-SUCCESS.md  BAC-SEARCH-STRATEGY.md  COMPLETION-REPORT.md  COMPLETION-SUMMARY.txt  COMPREHENSIVE-BAC-STUDY-GUIDE.md  COMPREHENSIVE-STUDY-GUIDE.md  COORDINATOR-FINAL-REPORT.md  Cargo.toml  DAILY-STUDY-SCHEDULE.md  DEEP-DIVE-ALL-TOPICS.html  DEEP-DIVE-ALL-TOPICS.md  DEEP-DIVE-COMPLETE.md  DETAILED-TOPIC-BREAKDOWN.md  EXAM-QUESTION-BANK.html  EXAM-QUESTION-BANK.md  EXERCISE-BREAKDOWN-COMPLETE.md  EXTRACTION-SUCCESS.md  FINAL-SYSTEM-SUMMARY.md  FRENCH-VOCABULARY-GUIDE.md  IMPLEMENTATION-COMPLETE.md  LINK-BUILDER-REPORT.md  MASTER-INDEX.md  QUICK-COMMANDS.md  QUICK-REFERENCE.md  QUICK-START-TODAY.md  README.md  RESEARCH-ANALYSIS-PLAN.md  RESOURCE-FINDER-REPORT.md  (+34 more)
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace.json
00-Meta/: CLEANUP-REPORT.md  CONTENT-MAPPING.md  DEEP-DIVE-INDEX.md  FINAL-SUMMARY.md  INDEX.md  MCP-SERVER-GUIDE.md  OCR-COMPLETE.md  PROGRESS-TABLE.md  QUICK-START.md  README.md  SMART-CONNECTIONS-SETUP.md  START-HERE.md  SYNC-GUIDE.md  SYSTEM-STATUS.md  TASK-12-FINAL.md
01-Concepts/: INDEX.md
02-Practice/: INDEX.md
03-Resources/: INDEX.md
04-Exams/: BAC-exam-styles.css  INDEX.md
05-Extracted/: INDEX.md
06-Daily/: 2026-03-08-Study-Tracker.md  Progress-Dashboard.md
08-Templates/: Concept-Note-Template.md  (+4 more)
(+2272 files in other folders)
