[package]
name = "study-vault"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "vault"
path = "src/vault.rs"

[[bin]]
name = "sr"
path = "src/sr.rs"

[[bin]]
name = "progress"
path = "src/progress.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
